# project-template

./: .gitignore  0119.md  CLAUDE.md  README.md  TODO.md  aws.dio  docker-compose.yml  わからなかったことめも.md
README/:  README_backend.md  README_cdk.md
backend/: .env.example  .gitignore  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/alembic/: env.py
backend/alembic/versions/: 36f317914d8c_update_datetime_columns_to_use_utc_.py  7fb74d561e02_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: examples.py  health.py
backend/app/application/: example_usecase.py
backend/app/core/: config.py  database.py
backend/app/domain/: example.py
backend/app/domain/repositories/: __init__.py  example_repository.py
backend/app/infrastructure/database/: models.py
backend/app/infrastructure/email/: smtp_client.py
backend/app/infrastructure/repositories/: example_repository.py
backend/app/infrastructure/storage/: s3_client.py
backend/app/schemas/: example.py
backend/batch/: sample_batch.py
backend/tests/: conftest.py
backend/tests/integration/: test_examples.py  test_health.py
backend/tests/unit/application/: __init__.py  test_example_usecase.py
backend/tests/unit/domain/: __init__.py  test_example.py
backend/tests/unit/mocks/: __init__.py  mock_example_repository.py
cdk/: .gitignore  CLAUDE.md  Dockerfile  README_cdk.md  cdk.context.json  package.json  tsconfig.json
docs/: ci-cd-pipeline.md  github-actions-deployment.md  (+1 more)
(+76 files in other folders)
